Closed Bug 1046005 Opened 10 years ago Closed 10 years ago

PlatformDecoderModule doesn't compile with OS X 10.9

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: jya, Assigned: jya, Mentored)

References

Details

Attachments

(1 file)

The new mac CoreVideo PlatformDecoderModule do not build on mac running 10.9 and using XCode 5.1.1

 0:10.37 In file included from /Users/jyavenard/Work/Mozilla/mozilla-central/obj-ff-dbg/content/media/fmp4/Unified_cpp_content_media_fmp40.cpp:80:
 0:10.37 /Users/jyavenard/Work/Mozilla/mozilla-central/content/media/fmp4/apple/AppleVTDecoder.cpp:386:7: error: use of undeclared identifier 'kVTVideoDecoderSpecification_EnableHardwareAcceleratedVideoDecoder'
 0:10.37       kVTVideoDecoderSpecification_EnableHardwareAcceleratedVideoDecoder,
 0:10.37       ^
 0:10.37 1 error generated.
 0:10.39 In the directory  /Users/jyavenard/Work/Mozilla/mozilla-central/obj-ff-dbg/content/media/fmp4
 0:10.39 The following command failed to execute properly:
 0:10.39 /opt/local/bin/ccache clang++ -o Unified_cpp_content_media_fmp40.o -c -fvisibility=hidden -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -I/Users/jyavenard/Work/Mozilla/mozilla-central/content/media/fmp4 -I. -I../../../dist/include -I/Users/jyavenard/Work/Mozilla/mozilla-central/obj-ff-dbg/dist/include/nspr -I/Users/jyavenard/Work/Mozilla/mozilla-central/obj-ff-dbg/dist/include/nss -fPIC -Qunused-arguments -DMOZILLA_CLIENT -include ../../../mozilla-config.h -MD -MP -MF .deps/Unified_cpp_content_media_fmp40.o.pp -Qunused-arguments -Qunused-arguments -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Werror=int-to-pointer-cast -Wtype-limits -Wempty-body -Wsign-compare -Wno-invalid-offsetof -Wno-inline-new-delete -Wno-c++0x-extensions -Wno-extended-offsetof -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -std=gnu++0x -pthread -DNO_X11 -pipe -DDEBUG -DTRACING -g -fno-omit-frame-pointer /Users/jyavenard/Work/Mozilla/mozilla-central/obj-ff-dbg/content/media/fmp4/Unified_cpp_content_media_fmp40.cpp
 0:10.39 /Users/jyavenard/Work/Mozilla/mozilla-central/config/rules.mk:948: recipe for target 'Unified_cpp_content_media_fmp40.o' failed
 0:10.39 gmake[2]: *** [Unified_cpp_content_media_fmp40.o] Error 1
 0:10.39 /Users/jyavenard/Work/Mozilla/mozilla-central/config/recurse.mk:85: recipe for target 'content/media/fmp4/target' failed
 0:10.39 gmake[1]: *** [content/media/fmp4/target] Error 2
 0:10.39 gmake[1]: *** Waiting for unfinished jobs....
 0:10.69 Note: rebuild with "/opt/local/bin/gmake VERBOSE=1 all-local" to show all compiler parameters.
 0:10.69 /Users/jyavenard/Work/Mozilla/mozilla-central/config/recurse.mk:48: recipe for target 'binaries' failed
 0:10.70 gmake: *** [binaries] Error 2
jyamba:mozilla-central jyavenard$
Thanks, I hadn't actually tested building on 10.9. The missing hardware acceleration constant is a good catch.

You also mentioned redefinition errors when the System framework was included instead of our local version. Can you try adding

>  LOCAL_INCLUDES += [
>      'apple',
>  ]

to the AppleMedia stanza in content/media/fmp4/moz.build? That might be a cleaner fix than renaming the header. I'd like to be able to just remove the stub headers entirely when we move to the 10.8 sdk without having to change the implementation.
Bug 1046005 - Fix compilation on OS X 10.9
Attachment #8464615 - Flags: review?(giles)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
Comment on attachment 8464615 [details] [diff] [review]
Fix compilation on OS X 10.9

Review of attachment 8464615 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks for the fix. I take it the include order issues were spurious?
Attachment #8464615 - Flags: review?(giles) → review+
https://hg.mozilla.org/mozilla-central/rev/b6b9ae174276
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: