Bug 1046005 - Fix compilation on OS X 10.9. r=rillian

We never directly link against the CoreVideo framework,
as such no external definition will be resolved